fixed layout bug with images

--- a/src/app/components/scribes.css
+++ b/src/app/components/scribes.css
@@ -275,3 +275,7 @@ li.card:last-of-type {
     justify-content: space-between;
 		align-items: center;
 }
+
+.scribe-neg-top {
+	margin-top: -6.5vh;
+}
